Notifications feed and counter in topbar

--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -95,6 +95,7 @@
     <Compile Include="DataContexts\CommentsRepo.cs" />
     <Compile Include="DataContexts\ConsumersRepo.cs" />
     <Compile Include="DataContexts\CoursesRepo.cs" />
+    <Compile Include="DataContexts\FeedRepo.cs" />
     <Compile Include="DataContexts\GradersRepo.cs" />
     <Compile Include="DataContexts\GroupsRepo.cs" />
     <Compile Include="DataContexts\LtiRequestsRepo.cs" />
@@ -116,6 +117,7 @@
     <Compile Include="DataContexts\VisitsRepo.cs" />
     <Compile Include="DataContexts\XQueueRepo.cs" />
     <Compile Include="Extensions\EfDbExtensions.cs" />
+    <Compile Include="Extensions\IQueryableExtensions.cs" />
     <Compile Include="Extensions\UserExtentions.cs" />
     <Compile Include="FilterOptions.cs" />
     <Compile Include="Migrations\201407111234255_InitialCreate.cs" />
@@ -426,6 +428,10 @@
     <Compile Include="Migrations\201706051620308_AddLastConfirmaionEmailTimeAndGender.Designer.cs">
       <DependentUpon>201706051620308_AddLastConfirmaionEmailTimeAndGender.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706291400295_AddFeedNotificationTransport.cs" />
+    <Compile Include="Migrations\201706291400295_AddFeedNotificationTransport.Designer.cs">
+      <DependentUpon>201706291400295_AddFeedNotificationTransport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -438,6 +444,7 @@
     <Compile Include="Models\EnabledAdditionalScoringGroup.cs" />
     <Compile Include="Models\ExerciseCodeReview.cs" />
     <Compile Include="Models\ExerciseSolutionByGrader.cs" />
+    <Compile Include="Models\FeedUpdateTimestamp.cs" />
     <Compile Include="Models\GraderClient.cs" />
     <Compile Include="Models\Group.cs" />
     <Compile Include="Models\GroupMember.cs" />
@@ -697,6 +704,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706051620308_AddLastConfirmaionEmailTimeAndGender.resx">
       <DependentUpon>201706051620308_AddLastConfirmaionEmailTimeAndGender.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706291400295_AddFeedNotificationTransport.resx">
+      <DependentUpon>201706291400295_AddFeedNotificationTransport.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
