Javascript and CSS bundles with source mapping, beauty names and static handlers

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -22,7 +22,7 @@
     <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
     <add name="statsd" connectionString="" />
   </connectionStrings>
-  <appSettings file="private.settings">
+  <appSettings>
     <!-- runnerToken должен совпадать в настройках Ulearn.Web и RunCsJob (или RunCsJob.Service в случае запуска через Windows-службу) -->
     <add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF" />
 
@@ -150,6 +150,10 @@
     
     <handlers>
          <add name="CertificatesStaticHandler" path="Certificate/*" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+         <add name="ScriptBundle" verb="GET" path="*.bundle.js" type="System.Web.Optimization.BundleHandler, System.Web.Optimization" preCondition="managedHandler" />
+         <add name="ScriptBundleMap" verb="GET" path="*.bundle.jsmap" type="System.Web.Optimization.BundleHandler, System.Web.Optimization" preCondition="managedHandler" />
+         <add name="StyleBundle" verb="GET" path="*.bundle.css" type="System.Web.Optimization.BundleHandler, System.Web.Optimization" preCondition="managedHandler" />
+
          <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
          <remove name="OPTIONSVerbHandler" />
          <remove name="TRACEVerbHandler" />
