--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AjaxMin" version="5.14.5506.26202" targetFramework="net47" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net47" />
   <package id="ApprovalTests" version="3.0.13" targetFramework="net47" />
   <package id="ApprovalUtilities" version="3.0.13" targetFramework="net47" />
+  <package id="AspNetBundling" version="2.0.3.0" targetFramework="net47" />
   <package id="Bitrium.Http.Extensions" version="1.1.0" targetFramework="net47" />
   <package id="bootstrap" version="3.3.7" targetFramework="net47" />
   <package id="DotNetZip" version="1.10.1" targetFramework="net47" />
