--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -227,6 +227,13 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Lesson_ShouldDeserialize.cs" />
+    <Compile Include="NUnitTestRunning\Runner_Should.cs" />
+    <Compile Include="NUnitTestRunning\TestsToRun\TenRepeatTest.cs" />
+    <Compile Include="NUnitTestRunning\TestsToRun\FiveTestCases.cs" />
+    <Compile Include="NUnitTestRunning\TestsToRun\ThreeTestsWithSetUp.cs" />
+    <Compile Include="NUnitTestRunning\TestsToRun\ThreeTestsWithTearDown.cs" />
+    <Compile Include="NUnitTestRunning\TestsToRun\ThreePassingTests.cs" />
+    <Compile Include="NUnitTestRunning\TestsToRun\ThreeTestsWithSecondFailing.cs" />
     <Compile Include="Quizes\CourseLoader_should.cs" />
     <Content Include="Quizes\normalizedQuiz.xml">
       <SubType>Designer</SubType>
