--- a/src/uLearn.Tests/CSharp/testProject/projDir/test.csproj
+++ b/src/uLearn.Tests/CSharp/testProject/projDir/test.csproj
@@ -43,7 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="secret_tests\MeaningOfLifeTask.WrongAnswer.25.cs" />
+    <Content Include="secret_tests\more_tests\MeaningOfLifeTask.WrongAnswer.Type.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="MeaningOfLifeTask.Solution.cs" />
+    <Content Include="MeaningOfLifeTask.cs" />
+    <Content Include="MeaningOfLifeTask.WrongAnswer.27.cs" />
+    <Content Include="MeaningOfLifeTask.WrongAnswer.21.plus.21.cs" />
+    <Content Include="checking\MeaningOfLifeTask.Factory.cs" />
     <Compile Include="..\Link.cs">
       <Link>Link.cs</Link>
     </Compile>
