--- a/src/RunCsJob/test/test.csproj
+++ b/src/RunCsJob/test/test.csproj
@@ -9,10 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>test</RootNamespace>
     <AssemblyName>test</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <CscToolPath>C:\Users\andgein\Documents\Work\2016\02. uLearn\uLearn\src\RunCsJob\bin\Debug\Microsoft.Net.Compilers.2.1.0</CscToolPath>
+    <CscToolPath>C:\Users\andgein\Documents\Work\ulearn\uLearn\src\RunCsJob\bin\Debug\Microsoft.Net.Compilers.2.2.0</CscToolPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,12 +36,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime">
-      <HintPath>C:\Users\andgein\Documents\Work\2016\02. uLearn\uLearn\src\RunCsJob\bin\Debug\System.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="System.ValueTuple">
-      <HintPath>C:\Users\andgein\AppData\Local\Temp\xn3rwtcs.bym\nsggihsp.pi4\RunCsJob\assembly\dl3\24395edb\00a6fa4f_04b9d201\System.ValueTuple.dll</HintPath>
-    </Reference>
+    <Reference Include="System.Runtime" />
+    <Reference Include="System.ValueTuple" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,7 +45,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
+      <HintPath>..\..\packages\NUnit.3.7.1\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
@@ -58,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="C:\Users\andgein\Documents\Work\2016\02. uLearn\uLearn\src\RunCsJob\bin\Debug\WellKnownLibs\nunit.framework.dll" />
+    <None Include="..\WellKnownLibs\nunit.framework.dll" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
