--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -222,7 +222,14 @@
     <Content Include="CSharp\testProject\projDir\MeaningOfLifeTask.WrongAnswer.27.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="CSharp\testProject\projDir\checking\MeaningOfLifeTask.Factory.cs">
+    <Content Include="CSharp\testProject\projDir\AnotherTask.WrongAnswer.88.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Compile Include="CSharp\Helper.cs" />
+    <Compile Include="CSharp\testProject\projDir\AnotherTask.Solution.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Content Include="CSharp\testProject\projDir\AnotherTask.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Compile Include="CSharp\testProject\projDir\MeaningOfLifeTask.Solution.cs">
