Integraion with Kontur.Passport: external login and special filter for required kontur.passport login

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -45,6 +45,9 @@
     <!-- Данные для авторизации через ВКонтакте -->
     <add key="owin.vk.appId" value="5333292" />
     <add key="owin.vk.appSecret" value="b1j1H7Yqbn2USgl6VYPt" />
+    <!-- Данные для авторизации через Контур.Паспорт -->
+    <add key="owin.konturPassport.clientId" value="ulearn" />
+    <add key="owin.konturPassport.clientSecret" value="" />
 
     <!-- Папка с курсами. По умолчанию — корневая папка веб-проекта. Должна содержать подпапки Courses, Courses.Staging, Courses.Versions.
        Если указана папка, отличная от корневой папки веб-проекта, содержимое подпапки Courses должно отдаваться веб-сервером по адресам /Courses/* -->
