--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -39,6 +39,7 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
@@ -47,6 +48,7 @@
   <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net47" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net47" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net47" />
+  <package id="Microsoft.Owin.Security.OpenIdConnect" version="3.1.0" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.13" targetFramework="net47" />
   <package id="Modernizr" version="2.8.3" targetFramework="net47" />
@@ -64,6 +66,8 @@
   <package id="Owin" version="1.0" targetFramework="net47" />
   <package id="RazorGenerator.Mvc" version="2.4.9" targetFramework="net47" />
   <package id="Respond" version="1.4.2" targetFramework="net47" />
+  <package id="RestSharp" version="105.0.1" targetFramework="net47" />
+  <package id="SkbKontur.Passport.Client" version="2.0.3" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
@@ -75,6 +79,7 @@
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net47" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net47" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.1" targetFramework="net47" />
   <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net47" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net47" />
