--- a/src/RunCsJob.Api/RunCsJob.Api.csproj
+++ b/src/RunCsJob.Api/RunCsJob.Api.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunnerSubmission.cs" />
     <Compile Include="RunningResults.cs" />
+    <Compile Include="TestsNotFoundFlag.cs" />
     <Compile Include="Verdict.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
