--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -67,6 +67,7 @@
   <package id="RazorGenerator.Mvc" version="2.4.9" targetFramework="net47" />
   <package id="Respond" version="1.4.2" targetFramework="net47" />
   <package id="RestSharp" version="105.0.1" targetFramework="net47" />
+  <package id="SkbKontur.Passport.Client" version="2.0.3" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
