Style fixes after font family change

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -65,7 +65,7 @@
     <!-- Токен бота. Получать у t.me/BotFather -->
     <add key="ulearn.telegram.botToken" value="293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg" />
     <!-- Имя бота без знака @. Бот должен быть доступен по ссылке https://t.me/<botName> -->
-    <add key="ulearn.telegram.botName" value="local_ulearn_me" />
+    <add key="ulearn.telegram.botName" value="local_ulearn_bot" />
     <!-- Канал в телеграме, куда отправлять новые комментарии (скоро выключится) -->
     <add key="ulearn.telegram.comments.channel" value="" />
     <!-- Канал в телеграме, куда отправлять информацию об ошибках -->
