fixed case when solution and user code are enclosed in directories, fixed namings

--- a/src/uLearn.Tests/CSharp/testProject/projDir/test.csproj
+++ b/src/uLearn.Tests/CSharp/testProject/projDir/test.csproj
@@ -47,12 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MeaningOfLifeTask.WrongAnswer.Type.cs" />
-    <Content Include="MeaningOfLifeTask.cs" />
+    <Content Include="inner-dir-1\inner-dir-2\MeaningOfLifeTask.cs" />
     <Content Include="MeaningOfLifeTask.WrongAnswer.27.cs" />
     <Content Include="MeaningOfLifeTask.WrongAnswer.21.plus.21.cs" />
     <Content Include="AnotherTask.cs" />
     <Content Include="AnotherTask.WrongAnswer.88.cs" />
-    <Compile Include="MeaningOfLifeTask.Solution.cs" />
+    <Compile Include="inner-dir-1\inner-dir-2\MeaningOfLifeTask.Solution.cs" />
     <Compile Include="AnotherTask.Solution.cs" />
     <Compile Include="OneFailingTest.cs" />
     <Compile Include="Program.cs" />
